# bits-and-mortar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
plugins/bob/: README.md
plugins/mason/mcp-server/: pyproject.toml
plugins/mason/mcp-server/src/mill_mcp/: __init__.py  server.py
plugins/mason/mcp-server/src/mill_mcp/parsers/: prove.py  report.py  spec.py
plugins/mason/mcp-server/src/mill_mcp/schemas/: findings.py
plugins/mason/mcp-server/src/mill_mcp/tools/: blueprint_spec.py  citation.py  display.py  evidence.py  intent_coverage.py  mill.py  mill_handoff.py  mill_orchestrator.py  mill_spawn.py  mill_state.py  mill_validate.py  test_deriver.py  validation.py  worktree_helpers.py
plugins/mason/mcp-server/tests/: __init__.py  conftest.py  test_evidence.py  test_evidence_for.py  test_intent_coverage.py  test_measure_run.py  test_spec_test_deriver.py
plugins/mason/mcp-server/tests/fixtures/casting_prompts/: casting-1-prompt-clean.md  casting-1-prompt-dropped.md  casting-1-prompt-paraphrased.md  casting-1-prompt-section-ref-only.md  casting-2-prompt-clean.md
plugins/mason/mcp-server/tests/fixtures/evidence/: evidence_log_legacy_v20.md
plugins/mason/mcp-server/tests/fixtures/intent_coverage/: intent_coverage_clean.json  intent_coverage_dangling_citation.json  intent_coverage_one_dropped.json  intent_coverage_paraphrased_via_typed.json  intent_coverage_schema_invalid.json  intent_coverage_synthetic_regression_01.json  intent_coverage_synthetic_regression_02.json  intent_coverage_synthetic_regression_03.json  (+7 more)
(+189 files in other folders)
